xc3_shader/src/snapshots/xc3 ch11021013.28.snap
---
source: xc3_shader/src/database.rs
---
var0 = vTex0.x;
var1 = vTex0.y;
var2 = Texture(s0, var0, var1).x;
var3 = vTex1.x;
var4 = U_Mate.gWrkFl4[0].x;
var5 = Mul(var3, var4);
var6 = vTex1.y;
var7 = U_Mate.gWrkFl4[0].y;
var8 = Mul(var6, var7);
var9 = Texture(gTResidentTex04, var5, var8).x;
var10 = Texture(s1, var0, var1).z;
var11 = U_Mate.gWrkFl4[1].x;
var12 = Mul(var10, var11);
var13 = U_Mate.gTexMat[0].x;
var14 = U_Mate.gTexMat[0].y;
var15 = U_Mate.gTexMat[0].z;
var16 = U_Mate.gTexMat[0].w;
var17 = TexMatrix(var3, var6, var13, var14, var15, var16);
var18 = U_Mate.gTexMat[1].x;
var19 = U_Mate.gTexMat[1].y;
var20 = U_Mate.gTexMat[1].z;
var21 = U_Mate.gTexMat[1].w;
var22 = TexMatrix(var3, var6, var18, var19, var20, var21);
var23 = Texture(gTResidentTex05, var17, var22).x;
var24 = U_Mate.gWrkFl4[1].y;
var25 = MulRatio(var12, var23, var24);
var26 = Mix(var2, var9, var25);
var27 = Texture(s0, var0, var1).y;
var28 = Texture(gTResidentTex04, var5, var8).y;
var29 = Mix(var27, var28, var25);
var30 = Texture(s0, var0, var1).z;
var31 = Texture(gTResidentTex04, var5, var8).z;
var32 = Mix(var30, var31, var25);
var33 = U_Mate.gWrkFl4[2].w;
var34 = MonochromeX(var26, var29, var32, var33);
o0.x = var34;

var0 = vTex0.x;
var1 = vTex0.y;
var2 = Texture(s0, var0, var1).x;
var3 = vTex1.x;
var4 = U_Mate.gWrkFl4[0].x;
var5 = Mul(var3, var4);
var6 = vTex1.y;
var7 = U_Mate.gWrkFl4[0].y;
var8 = Mul(var6, var7);
var9 = Texture(gTResidentTex04, var5, var8).x;
var10 = Texture(s1, var0, var1).z;
var11 = U_Mate.gWrkFl4[1].x;
var12 = Mul(var10, var11);
var13 = U_Mate.gTexMat[0].x;
var14 = U_Mate.gTexMat[0].y;
var15 = U_Mate.gTexMat[0].z;
var16 = U_Mate.gTexMat[0].w;
var17 = TexMatrix(var3, var6, var13, var14, var15, var16);
var18 = U_Mate.gTexMat[1].x;
var19 = U_Mate.gTexMat[1].y;
var20 = U_Mate.gTexMat[1].z;
var21 = U_Mate.gTexMat[1].w;
var22 = TexMatrix(var3, var6, var18, var19, var20, var21);
var23 = Texture(gTResidentTex05, var17, var22).x;
var24 = U_Mate.gWrkFl4[1].y;
var25 = MulRatio(var12, var23, var24);
var26 = Mix(var2, var9, var25);
var27 = Texture(s0, var0, var1).y;
var28 = Texture(gTResidentTex04, var5, var8).y;
var29 = Mix(var27, var28, var25);
var30 = Texture(s0, var0, var1).z;
var31 = Texture(gTResidentTex04, var5, var8).z;
var32 = Mix(var30, var31, var25);
var33 = U_Mate.gWrkFl4[2].w;
var35 = MonochromeY(var26, var29, var32, var33);
o0.y = var35;

var0 = vTex0.x;
var1 = vTex0.y;
var2 = Texture(s0, var0, var1).x;
var3 = vTex1.x;
var4 = U_Mate.gWrkFl4[0].x;
var5 = Mul(var3, var4);
var6 = vTex1.y;
var7 = U_Mate.gWrkFl4[0].y;
var8 = Mul(var6, var7);
var9 = Texture(gTResidentTex04, var5, var8).x;
var10 = Texture(s1, var0, var1).z;
var11 = U_Mate.gWrkFl4[1].x;
var12 = Mul(var10, var11);
var13 = U_Mate.gTexMat[0].x;
var14 = U_Mate.gTexMat[0].y;
var15 = U_Mate.gTexMat[0].z;
var16 = U_Mate.gTexMat[0].w;
var17 = TexMatrix(var3, var6, var13, var14, var15, var16);
var18 = U_Mate.gTexMat[1].x;
var19 = U_Mate.gTexMat[1].y;
var20 = U_Mate.gTexMat[1].z;
var21 = U_Mate.gTexMat[1].w;
var22 = TexMatrix(var3, var6, var18, var19, var20, var21);
var23 = Texture(gTResidentTex05, var17, var22).x;
var24 = U_Mate.gWrkFl4[1].y;
var25 = MulRatio(var12, var23, var24);
var26 = Mix(var2, var9, var25);
var27 = Texture(s0, var0, var1).y;
var28 = Texture(gTResidentTex04, var5, var8).y;
var29 = Mix(var27, var28, var25);
var30 = Texture(s0, var0, var1).z;
var31 = Texture(gTResidentTex04, var5, var8).z;
var32 = Mix(var30, var31, var25);
var33 = U_Mate.gWrkFl4[2].w;
var36 = MonochromeZ(var26, var29, var32, var33);
o0.z = var36;

var37 = vColor.y;
var38 = 0.004;
var39 = Add(var37, var38);
var40 = 0.0;
var41 = 1.0;
var42 = Clamp(var39, var40, var41);
var43 = 3.0;
var44 = Mul(var42, var43);
var45 = Truncate(var44);
var46 = Max(var45, var40);
var47 = Uint(var46);
var48 = Int(var47);
var49 = 6;
var50 = LeftShift(var48, var49);
var51 = Uint(var50);
var52 = Float(var51);
var53 = 0.003921569;
var54 = Mul(var52, var53);
o0.w = var54;

var55 = U_Mate.gWrkFl4[2].z;
o1.x = var55;

var56 = U_Mate.gWrkFl4[2].y;
o1.y = var56;

var57 = U_Mate.gWrkFl4[1].w;
o1.z = var57;

var58 = 0.008235293;
o1.w = var58;

var0 = vTex0.x;
var1 = vTex0.y;
var59 = Texture(s2, var0, var1).x;
var60 = Texture(s2, var0, var1).y;
var61 = U_Mate.gWrkFl4[0].z;
var62 = Mul(var0, var61);
var63 = U_Mate.gWrkFl4[0].w;
var64 = Mul(var1, var63);
var65 = Texture(gTResidentTex09, var62, var64).x;
var66 = Texture(gTResidentTex09, var62, var64).y;
var67 = U_Mate.gWrkFl4[1].z;
var68 = AddNormalX(var59, var60, var65, var66, var67);
o2.x = var68;

var0 = vTex0.x;
var1 = vTex0.y;
var59 = Texture(s2, var0, var1).x;
var60 = Texture(s2, var0, var1).y;
var61 = U_Mate.gWrkFl4[0].z;
var62 = Mul(var0, var61);
var63 = U_Mate.gWrkFl4[0].w;
var64 = Mul(var1, var63);
var65 = Texture(gTResidentTex09, var62, var64).x;
var66 = Texture(gTResidentTex09, var62, var64).y;
var67 = U_Mate.gWrkFl4[1].z;
var69 = AddNormalY(var59, var60, var65, var66, var67);
o2.y = var69;

var0 = vTex0.x;
var1 = vTex0.y;
var70 = Texture(s1, var0, var1).y;
o2.z = var70;

var41 = 1.0;
var71 = vPos.w;
var72 = Div(var41, var71);
var73 = vPos.x;
var74 = Div(var73, var71);
var75 = Negate(var74);
var76 = Fma(var72, var73, var75);
var77 = 0.5;
var78 = Mul(var76, var77);
var79 = Abs(var78);
var80 = vPos.y;
var81 = Div(var80, var71);
var82 = Negate(var81);
var83 = Fma(var72, var80, var82);
var84 = Mul(var83, var77);
var85 = Abs(var84);
var86 = Max(var79, var85);
var87 = Max(var86, var41);
var88 = Div(var78, var87);
var89 = Abs(var88);
var90 = InverseSqrt(var89);
var91 = Div(var41, var90);
o3.x = var91;

var41 = 1.0;
var71 = vPos.w;
var72 = Div(var41, var71);
var80 = vPos.y;
var81 = Div(var80, var71);
var82 = Negate(var81);
var83 = Fma(var72, var80, var82);
var77 = 0.5;
var84 = Mul(var83, var77);
var73 = vPos.x;
var74 = Div(var73, var71);
var75 = Negate(var74);
var76 = Fma(var72, var73, var75);
var78 = Mul(var76, var77);
var79 = Abs(var78);
var85 = Abs(var84);
var86 = Max(var79, var85);
var87 = Max(var86, var41);
var92 = Div(var84, var87);
var93 = Abs(var92);
var94 = InverseSqrt(var93);
var95 = Div(var41, var94);
o3.y = var95;

var40 = 0.0;
o3.z = var40;

var41 = 1.0;
var71 = vPos.w;
var72 = Div(var41, var71);
var73 = vPos.x;
var74 = Div(var73, var71);
var75 = Negate(var74);
var76 = Fma(var72, var73, var75);
var77 = 0.5;
var78 = Mul(var76, var77);
var79 = Abs(var78);
var80 = vPos.y;
var81 = Div(var80, var71);
var82 = Negate(var81);
var83 = Fma(var72, var80, var82);
var84 = Mul(var83, var77);
var85 = Abs(var84);
var86 = Max(var79, var85);
var87 = Max(var86, var41);
var88 = Div(var78, var87);
var40 = 0.0;
var96 = GreaterEqual(var88, var40);
var97 = Select(var96, var41, var40);
var98 = 0.33333334;
var92 = Div(var84, var87);
var99 = GreaterEqual(var92, var40);
var100 = Select(var99, var41, var40);
var101 = 0.6666667;
var102 = Mul(var100, var101);
var103 = Fma(var97, var98, var102);
var104 = 0.01;
var105 = Add(var103, var104);
o3.w = var105;

var106 = vPos.z;
var107 = 8.0;
var108 = Mul(var106, var107);
var109 = Floor(var108);
var110 = Sub(var108, var109);
o4.x = var110;

var106 = vPos.z;
var107 = 8.0;
var108 = Mul(var106, var107);
var109 = Floor(var108);
var53 = 0.003921569;
var111 = Mul(var109, var53);
var112 = Floor(var111);
var113 = Sub(var111, var112);
o4.y = var113;

var106 = vPos.z;
var107 = 8.0;
var108 = Mul(var106, var107);
var109 = Floor(var108);
var53 = 0.003921569;
var111 = Mul(var109, var53);
var112 = Floor(var111);
var114 = Mul(var112, var53);
o4.z = var114;

var115 = vColor.x;
o4.w = var115;

var0 = vTex0.x;
var1 = vTex0.y;
var0 = Texture(s0, var0, var1).xyz;
var3 = vTex1.x;
var4 = U_Mate.gWrkFl4[0].x;
var5 = Mul(var3, var4);
var6 = vTex1.y;
var7 = U_Mate.gWrkFl4[0].y;
var8 = Mul(var6, var7);
var1 = Texture(gTResidentTex04, var5, var8).xyz;
var2 = Texture(s1, var0, var1).zzz;
var3 = U_Mate.gWrkFl4[1].xxx;
var4 = Mul(var2, var3);
var13 = U_Mate.gTexMat[0].x;
var14 = U_Mate.gTexMat[0].y;
var15 = U_Mate.gTexMat[0].z;
var16 = U_Mate.gTexMat[0].w;
var17 = TexMatrix(var3, var6, var13, var14, var15, var16);
var18 = U_Mate.gTexMat[1].x;
var19 = U_Mate.gTexMat[1].y;
var20 = U_Mate.gTexMat[1].z;
var21 = U_Mate.gTexMat[1].w;
var22 = TexMatrix(var3, var6, var18, var19, var20, var21);
var5 = Texture(gTResidentTex05, var17, var22).xxx;
var6 = U_Mate.gWrkFl4[1].yyy;
var7 = MulRatio(var4, var5, var6);
var8 = Mix(var0, var1, var7);
var9 = U_Mate.gWrkFl4[2].www;
var10 = Monochrome(var8, var9).xyz;
o0.xyz = var10;
