xc3_shader/src/snapshots/xc3 ch11021013.31.snap
---
source: xc3_shader/src/database.rs
---
var0 = Fresnel(U_Mate.gWrkFl4[1].z);
var1 = Mix(Texture(s0, vTex0.x, vTex0.y).x, U_Mate.gWrkCol[1].x, var0);
var2 = Mul(vTex0.x, U_Mate.gWrkFl4[0].x);
var3 = Mul(vTex0.y, U_Mate.gWrkFl4[0].y);
var4 = Mul(Texture(s1, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[1].w);
var5 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[0].x, U_Mate.gTexMat[0].y, U_Mate.gTexMat[0].z, U_Mate.gTexMat[0].w);
var6 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[1].x, U_Mate.gTexMat[1].y, U_Mate.gTexMat[1].z, U_Mate.gTexMat[1].w);
var7 = MulRatio(var4, Texture(gTResidentTex05, var5, var6).x, U_Mate.gWrkFl4[2].x);
var8 = Mix(var1, Texture(gTResidentTex04, var2, var3).x, var7);
var9 = Mix(Texture(s0, vTex0.x, vTex0.y).y, U_Mate.gWrkCol[1].y, var0);
var10 = Mix(var9, Texture(gTResidentTex04, var2, var3).y, var7);
var11 = Mix(Texture(s0, vTex0.x, vTex0.y).z, U_Mate.gWrkCol[1].z, var0);
var12 = Mix(var11, Texture(gTResidentTex04, var2, var3).z, var7);
var13 = MonochromeX(var8, var10, var12, U_Mate.gWrkFl4[3].w);
o0.x = var13;

var0 = Fresnel(U_Mate.gWrkFl4[1].z);
var1 = Mix(Texture(s0, vTex0.x, vTex0.y).x, U_Mate.gWrkCol[1].x, var0);
var2 = Mul(vTex0.x, U_Mate.gWrkFl4[0].x);
var3 = Mul(vTex0.y, U_Mate.gWrkFl4[0].y);
var4 = Mul(Texture(s1, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[1].w);
var5 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[0].x, U_Mate.gTexMat[0].y, U_Mate.gTexMat[0].z, U_Mate.gTexMat[0].w);
var6 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[1].x, U_Mate.gTexMat[1].y, U_Mate.gTexMat[1].z, U_Mate.gTexMat[1].w);
var7 = MulRatio(var4, Texture(gTResidentTex05, var5, var6).x, U_Mate.gWrkFl4[2].x);
var8 = Mix(var1, Texture(gTResidentTex04, var2, var3).x, var7);
var9 = Mix(Texture(s0, vTex0.x, vTex0.y).y, U_Mate.gWrkCol[1].y, var0);
var10 = Mix(var9, Texture(gTResidentTex04, var2, var3).y, var7);
var11 = Mix(Texture(s0, vTex0.x, vTex0.y).z, U_Mate.gWrkCol[1].z, var0);
var12 = Mix(var11, Texture(gTResidentTex04, var2, var3).z, var7);
var13 = MonochromeY(var8, var10, var12, U_Mate.gWrkFl4[3].w);
o0.y = var13;

var0 = Fresnel(U_Mate.gWrkFl4[1].z);
var1 = Mix(Texture(s0, vTex0.x, vTex0.y).x, U_Mate.gWrkCol[1].x, var0);
var2 = Mul(vTex0.x, U_Mate.gWrkFl4[0].x);
var3 = Mul(vTex0.y, U_Mate.gWrkFl4[0].y);
var4 = Mul(Texture(s1, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[1].w);
var5 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[0].x, U_Mate.gTexMat[0].y, U_Mate.gTexMat[0].z, U_Mate.gTexMat[0].w);
var6 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[1].x, U_Mate.gTexMat[1].y, U_Mate.gTexMat[1].z, U_Mate.gTexMat[1].w);
var7 = MulRatio(var4, Texture(gTResidentTex05, var5, var6).x, U_Mate.gWrkFl4[2].x);
var8 = Mix(var1, Texture(gTResidentTex04, var2, var3).x, var7);
var9 = Mix(Texture(s0, vTex0.x, vTex0.y).y, U_Mate.gWrkCol[1].y, var0);
var10 = Mix(var9, Texture(gTResidentTex04, var2, var3).y, var7);
var11 = Mix(Texture(s0, vTex0.x, vTex0.y).z, U_Mate.gWrkCol[1].z, var0);
var12 = Mix(var11, Texture(gTResidentTex04, var2, var3).z, var7);
var13 = MonochromeZ(var8, var10, var12, U_Mate.gWrkFl4[3].w);
o0.z = var13;

var0 = Add(vColor.y, 0.004);
var1 = Clamp(var0, 0.0, 1.0);
var2 = Mul(var1, 3.0);
var3 = Truncate(var2);
var4 = Max(var3, 0.0);
var5 = Uint(var4);
var6 = Int(var5);
var7 = LeftShift(var6, 6);
var8 = Uint(var7);
var9 = Float(var8);
var10 = Mul(var9, 0.003921569);
o0.w = var10;

o1.x = U_Mate.gWrkFl4[3].z;

o1.y = U_Mate.gWrkFl4[3].y;

o1.z = U_Mate.gWrkFl4[2].w;

o1.w = 0.008235293;

var0 = Mul(vTex0.x, U_Mate.gWrkFl4[0].z);
var1 = Mul(vTex0.y, U_Mate.gWrkFl4[0].w);
var2 = AddNormalX(Texture(s2, vTex0.x, vTex0.y).x, Texture(s2, vTex0.x, vTex0.y).y, Texture(gTResidentTex09, var0, var1).x, Texture(gTResidentTex09, var0, var1).y, U_Mate.gWrkFl4[2].y);
var3 = AddNormalY(Texture(s2, vTex0.x, vTex0.y).x, Texture(s2, vTex0.x, vTex0.y).y, Texture(gTResidentTex09, var0, var1).x, Texture(gTResidentTex09, var0, var1).y, U_Mate.gWrkFl4[2].y);
var4 = Mul(vTex0.x, U_Mate.gWrkFl4[1].x);
var5 = Mul(vTex0.y, U_Mate.gWrkFl4[1].y);
var6 = AddNormalX(var2, var3, Texture(s3, var4, var5).x, Texture(s3, var4, var5).y, U_Mate.gWrkFl4[2].z);
o2.x = var6;

var0 = Mul(vTex0.x, U_Mate.gWrkFl4[0].z);
var1 = Mul(vTex0.y, U_Mate.gWrkFl4[0].w);
var2 = AddNormalX(Texture(s2, vTex0.x, vTex0.y).x, Texture(s2, vTex0.x, vTex0.y).y, Texture(gTResidentTex09, var0, var1).x, Texture(gTResidentTex09, var0, var1).y, U_Mate.gWrkFl4[2].y);
var3 = AddNormalY(Texture(s2, vTex0.x, vTex0.y).x, Texture(s2, vTex0.x, vTex0.y).y, Texture(gTResidentTex09, var0, var1).x, Texture(gTResidentTex09, var0, var1).y, U_Mate.gWrkFl4[2].y);
var4 = Mul(vTex0.x, U_Mate.gWrkFl4[1].x);
var5 = Mul(vTex0.y, U_Mate.gWrkFl4[1].y);
var6 = AddNormalY(var2, var3, Texture(s3, var4, var5).x, Texture(s3, var4, var5).y, U_Mate.gWrkFl4[2].z);
o2.y = var6;

o2.z = Texture(s4, vTex0.x, vTex0.y).y;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjW(var0, var1, var2);
var4 = Div(1.0, var3);
var5 = MatMulPointProjX(var0, var1, var2);
var6 = Div(var5, var3);
var7 = Negate(var6);
var8 = Fma(var4, var5, var7);
var9 = Mul(var8, 0.5);
var10 = Abs(var9);
var11 = MatMulPointProjY(var0, var1, var2);
var12 = Div(var11, var3);
var13 = Negate(var12);
var14 = Fma(var4, var11, var13);
var15 = Mul(var14, 0.5);
var16 = Abs(var15);
var17 = Max(var10, var16);
var18 = Max(var17, 1.0);
var19 = Div(var9, var18);
var20 = Abs(var19);
var21 = InverseSqrt(var20);
var22 = Div(1.0, var21);
o3.x = var22;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjW(var0, var1, var2);
var4 = Div(1.0, var3);
var5 = MatMulPointProjY(var0, var1, var2);
var6 = Div(var5, var3);
var7 = Negate(var6);
var8 = Fma(var4, var5, var7);
var9 = Mul(var8, 0.5);
var10 = MatMulPointProjX(var0, var1, var2);
var11 = Div(var10, var3);
var12 = Negate(var11);
var13 = Fma(var4, var10, var12);
var14 = Mul(var13, 0.5);
var15 = Abs(var14);
var16 = Abs(var9);
var17 = Max(var15, var16);
var18 = Max(var17, 1.0);
var19 = Div(var9, var18);
var20 = Abs(var19);
var21 = InverseSqrt(var20);
var22 = Div(1.0, var21);
o3.y = var22;

o3.z = 0.0;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjW(var0, var1, var2);
var4 = Div(1.0, var3);
var5 = MatMulPointProjX(var0, var1, var2);
var6 = Div(var5, var3);
var7 = Negate(var6);
var8 = Fma(var4, var5, var7);
var9 = Mul(var8, 0.5);
var10 = Abs(var9);
var11 = MatMulPointProjY(var0, var1, var2);
var12 = Div(var11, var3);
var13 = Negate(var12);
var14 = Fma(var4, var11, var13);
var15 = Mul(var14, 0.5);
var16 = Abs(var15);
var17 = Max(var10, var16);
var18 = Max(var17, 1.0);
var19 = Div(var9, var18);
var20 = GreaterEqual(var19, 0.0);
var21 = Select(var20, 1.0, 0.0);
var22 = Div(var15, var18);
var23 = GreaterEqual(var22, 0.0);
var24 = Select(var23, 1.0, 0.0);
var25 = Mul(var24, 0.6666667);
var26 = Fma(var21, 0.33333334, var25);
var27 = Add(var26, 0.01);
o3.w = var27;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjZ(var0, var1, var2);
var4 = Sub(var3, U_Static.gCDep.y);
var5 = Mul(var4, U_Static.gCDep.z);
var6 = Mul(var5, 8.0);
var7 = Floor(var6);
var8 = Sub(var6, var7);
o4.x = var8;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjZ(var0, var1, var2);
var4 = Sub(var3, U_Static.gCDep.y);
var5 = Mul(var4, U_Static.gCDep.z);
var6 = Mul(var5, 8.0);
var7 = Floor(var6);
var8 = Mul(var7, 0.003921569);
var9 = Floor(var8);
var10 = Sub(var8, var9);
o4.y = var10;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjZ(var0, var1, var2);
var4 = Sub(var3, U_Static.gCDep.y);
var5 = Mul(var4, U_Static.gCDep.z);
var6 = Mul(var5, 8.0);
var7 = Floor(var6);
var8 = Mul(var7, 0.003921569);
var9 = Floor(var8);
var10 = Mul(var9, 0.003921569);
o4.z = var10;

o4.w = vColor.x;

var0 = Fresnel(U_Mate.gWrkFl4[1].zzz);
var1 = Mix(Texture(s0, vTex0.x, vTex0.y).xyz, U_Mate.gWrkCol[1].xyz, var0);
var0 = Mul(vTex0.x, U_Mate.gWrkFl4[0].x);
var1 = Mul(vTex0.y, U_Mate.gWrkFl4[0].y);
var2 = Mul(Texture(s1, vTex0.x, vTex0.y).xxx, U_Mate.gWrkFl4[1].www);
var2 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[0].x, U_Mate.gTexMat[0].y, U_Mate.gTexMat[0].z, U_Mate.gTexMat[0].w);
var3 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[1].x, U_Mate.gTexMat[1].y, U_Mate.gTexMat[1].z, U_Mate.gTexMat[1].w);
var3 = MulRatio(var2, Texture(gTResidentTex05, var2, var3).xxx, U_Mate.gWrkFl4[2].xxx);
var4 = Mix(var1, Texture(gTResidentTex04, var0, var1).xyz, var3);
var5 = Monochrome(var4, U_Mate.gWrkFl4[3].www).xyz;
o0.xyz = var5;
